# rift

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: animals.rf  counter.rf  fibonacci.rf  fizzbuzz.rf  linked_list.rf
rift/: __init__.py  __main__.py  ast_nodes.py  callable.py  environment.py  errors.py  instance.py  interpreter.py  parser.py  resolver.py  scanner.py  stdlib.py  tokens.py
tests/: conftest.py  test_classes.py  test_closures.py  test_errors.py  test_interpreter.py  test_parser.py  test_scanner.py  test_stdlib.py
