[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rift"
version = "0.1.0"
description = "A tree-walking interpreter for the Rift programming language"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "Jared Mahotiere", email = "jmahotie@purdue.edu"}]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0", "ruff>=0.1.0"]

[project.scripts]
rift = "rift.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 100
